# pandoc-api

./: LICENSE  pandoc-api.cabal
src/: Lib.hs
