name:                pandoc-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shark404/pandoc-api#readme
license:             BSD3
license-file:        LICENSE
author:              Nathan Koch
maintainer:          nathan@corilla.com
copyright:           2016 Nathan Koch
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , pandoc
                     , http-media
                     , bytestring
                     , attoparsec
  default-language:    Haskell2010

executable pandoc-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pandoc-api
  default-language:    Haskell2010

test-suite pandoc-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pandoc-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shark404/pandoc-api
